2008-02-12  Badlop  <badlop@process-one.net>

	* src/acl.erl: Normalize ACL before adding to the configuration
	tables (EJAB-521)

2008-02-11  Mickael Remond <mremond@process-one.net>

	* src/ejabberd_auth.erl: Do not allow empty password at
	creation. On authent, check in all cases that password is not
	empty.
	* src/ejabberd_auth_odbc.erl: Likewise
	* src/ejabberd_auth_internal.erl: Likewise
	* src/ejabberd_auth_external.erl: Likewise

	* src/ejabberd_receiver.erl: Avoid crash to appear in log, when
	trying to close a stream with an undefined state.

2008-02-11  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: Bugfix: event used in place of x when
	xmlns is pubsub#event (EJAB-518)

2008-02-11  Badlop  <badlop@process-one.net>

	* src/mod_muc/mod_muc_room.erl: Bugfix: local message stanza may
	not have an attribute From (EJAB-515)

2008-02-08  Badlop  <badlop@process-one.net>

	* src/mod_muc/mod_muc_room.erl: Include the error condition in the
	presence status when kicking a participant due to an error
	stanza (EJAB-496)

	* src/ejabberd.cfg.example: Document options to SQL keep alive
	interval and pool size (EJAB-206)
	* doc/guide.tex: Likewise
	* doc/guide.html: Likewise

2008-02-06  Badlop  <badlop@process-one.net>

	* src/mod_muc/mod_muc_room.erl: Support for decline of invitation
	to MUC room (EJAB-515)

2008-02-06  Mickael Remond <mremond@process-one.net>

	* src/mod_pubsub/node_buddy.erl: Fixed typo
	* src/mod_pubsub/node_club.erl: Likewise
	* src/mod_pubsub/node_dispatch.erl: Likewise
	* src/mod_pubsub/node_pep.erl: Likewise
	* src/mod_pubsub/node_private.erl: Likewise
	* src/mod_pubsub/node.template: Likewise
	
	* src/mod_pubsub/gen_pubsub_node.erl: API improvement: Added a way
	to generate custom item name
	* src/mod_pubsub/node_dispatch.erl: Likewise
	* src/mod_pubsub/node_buddy.erl: Likewise
	* src/mod_pubsub/node_private.erl: Likewise
	* src/mod_pubsub/node_club.erl: Likewise